kubernetes/ingress/ingress-nginx-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-metrics
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
spec:
  ports:
    - name: metrics
      port: 10254
      targetPort: 10254
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: ingress-nginx
